Modified TimingWorker and TimingController to not notify the worker on ChipReads/Results updates. Instead now the Timing Page asks for an update every second then updates if there are any. This may help with some slowdowns.

--- a/EventDirector/UI/MainPages/TimingPage.xaml
+++ b/EventDirector/UI/MainPages/TimingPage.xaml
@@ -8,7 +8,7 @@
       xmlns:local="clr-namespace:EventDirector.UI.MainPages"
       mc:Ignorable="d" 
       d:DesignHeight="650" d:DesignWidth="900"
-      Title="TimingPage">
+      Title="TimingPage" Loaded="Page_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
