Added sort by Place to the timing results page. Updated the sort by place algorithm in the TimeResult class. Changed how we deal with "Show only Finishes" for a time based event to show only the LAST finish time.

--- a/EventDirector/UI/MainPages/TimingPage.xaml
+++ b/EventDirector/UI/MainPages/TimingPage.xaml
@@ -40,6 +40,7 @@
                     <ComboBoxItem Content="Gun Time" />
                     <ComboBoxItem Content="Bib"/>
                     <ComboBoxItem Content="Division"/>
+                    <ComboBoxItem Content="Place"/>
                     <ComboBoxItem Content="Age Group"/>
                     <ComboBoxItem Content="Gender"/>
                 </ComboBox>
