--- a/EventDirector/UI/MainWindow.xaml
+++ b/EventDirector/UI/MainWindow.xaml
@@ -26,6 +26,7 @@
             <Button x:Name="segmentsButton" Content="Segments" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="SegmentsButton_Click" AutomationProperties.HelpText="Display Segments" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
             <Button x:Name="agegroupsButton" Content="Age Groups" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="AgegroupsButton_Click" AutomationProperties.HelpText="Display Age Groups" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
             <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="SettingsButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
+            <Button x:Name="aboutButton" Content="About" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="AboutButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
         </StackPanel>
         <Frame x:Name="TheFrame" Grid.Column="1" NavigationUIVisibility="Hidden" />
     </Grid>
