Small tweaks to ensure renaming worked properly.

--- a/EventDirector/UI/MainWindow.xaml
+++ b/EventDirector/UI/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Event Director" Height="750" Width="1300" MinHeight="600" MinWidth="800"
+        Title="ChronoKeep" Height="750" Width="1300" MinHeight="600" MinWidth="800"
         Closing="Window_Closing" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
