Fixed a bug where getting chipreads would (again) ignore any manual reads due to an error in joining. (This was fixed previously in GetUsefulChipReads, but the change wasn't propagated up to GetChipReads). Starting to use the TimeResult Status field. Added Status to EventSpecific and Participant.  This field uses the CheckedIn field to carry a person's status. We were also apparently calculating the chipSeconds and chipMilliseconds twice... good times.  Also changed the Regex match to work properly since we now can have a value other than a time in that field. Added DNF functionality to the TimingWorker. This is mostly focused on the Distance Based Race type, but there is some functionality included for Time Based Races. For time based races we can now specify a time when a person gives up. This will make it ignore any times after that time. The time put in the chipread for a time based race and the DNF status are VERY important. We re-purposed the Manual Entry window for use in the DNF/Finished area because they're very similar.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -58,7 +58,7 @@
                         <StackPanel Grid.Column="1">
                             <Button Content="Awards" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
                             <Button Content="Raw Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="RawReads_Click"/>
-                            <Button Content="DNS/DNF List" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" IsEnabled="False"/>
+                            <Button x:Name="DNFButton" Content="Add DNF" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="AddDNF_Click"/>
                         </StackPanel>
                     </Grid>
                 </Expander>
