--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -21,7 +21,7 @@
             <Label Content="Date" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
             <DatePicker Name="DateBox" FontSize="16" Margin="5,10,10,10"/>
         </DockPanel>
-        <DockPanel>
+        <DockPanel x:Name="LocationPanel">
             <Label Content="Location" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
             <ComboBox Name="LocationBox" FontSize="16" Margin="5,10,10,10"/>
         </DockPanel>
