--- a/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
+++ b/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="45"/>
         </Grid.RowDefinitions>
-        <ScrollViewer Grid.Row="0">
+        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto">
             <StackPanel>
                 <Label Name="DivisionName" Content="DivisionName" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,-5"/>
                 <Expander x:Name="activePanel" Header="Active" Margin="0,0,0,0" IsExpanded="True" FontSize="12" HorizontalAlignment="Stretch">
