--- a/ChronoKeep/IO/HtmlTemplates/style.css
+++ b/ChronoKeep/IO/HtmlTemplates/style.css
@@ -15,22 +15,14 @@ a:visited {
   text-align: center;
 }
 .text-important {
-  font-family: 'Roboto Condensed', sans-serif;
   color: #337ab7;
 }
 /**
  * Event options
  */
 .results-wrapper {
-  margin: 0px 0px 20px 15px;
-  padding: 10px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   text-align: center;
-  border-radius: 7px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #e7e7e7;
-  background-color: #F8F8F8;
-  box-shadow: 3px 3px 3px #767676;
 }
 .results-btn {
   width: 150px;
@@ -44,6 +36,7 @@ a:visited {
 .results-panel {
   border-style: none;
   box-shadow: none;
+  border: none !important;
 }
 @media (max-width: 556px) {
   .results-wrapper {
@@ -67,10 +60,45 @@ a:visited {
   padding-top: 4px;
 }
 .well {
-  padding: 0px;
+  padding: 20px;
   overflow: hidden;
 }
 table {
   min-width: 360px;
   overflow: hidden;
+}
+.panel-center {
+  text-align: center;
+}
+td {
+  padding: 5px;
+  text-align: center;
+  border: 1px solid #E7E7E7;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 10px;
+  border-style: hidden;
+  box-shadow: 0 0 0 1px #E7E7E7;
+}
+@media (max-width: 500px) {
+  td {
+    font-size: 12px;
+    padding: 1px;
+  }
+  .content-area {
+    padding: 0px 5px;
+  }
+}
+.table-overflow {
+  overflow: auto;
+  max-width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+@media (max-width: 767px) {
+  .overflow-hidden {
+    display: none;
+  }
 }
