--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -22,35 +22,35 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="245"/>
+                <ColumnDefinition Width="210"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0">
                 <DockPanel>
-                    <Label Content="Company Name" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
-                    <TextBox Name="CompanyNameBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    <Label Content="Company Name" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
+                    <TextBox Name="CompanyNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                 </DockPanel>
                 <DockPanel Grid.Column="0">
-                    <Label Content="Timing Method" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="150" />
-                    <ComboBox Name="DefaultTimingBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                    <Label Content="Default Timing System" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
+                    <ComboBox Name="DefaultTimingBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                 </DockPanel>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="170"/>
+                        <ColumnDefinition Width="190"/>
                         <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Export Directory" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" Grid.Column="0"/>
-                    <TextBox Name="DefaultExportDirBox" FontSize="16" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
-                    <Button Name="ChangeExport" FontSize="16" Height="35" Margin="0,10,10,10" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
+                    <Label Content="Export Directory" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Grid.Column="0"/>
+                    <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
+                    <Button Name="ChangeExport" FontSize="14" Height="29" Margin="0,10,10,10" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
                 </Grid>
                 <DockPanel>
-                    <Label Content="Liability Waiver" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Width="150" />
-                    <TextBox Name="DefaultWaiverBox" FontSize="16" Margin="0,10,10,10" AcceptsReturn="True" TextWrapping="Wrap" Height="200"/>
+                    <Label Content="Liability Waiver" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Width="170" />
+                    <TextBox Name="DefaultWaiverBox" FontSize="14" Margin="0,10,10,10" AcceptsReturn="True" TextWrapping="Wrap" Height="200"/>
                 </DockPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
-                <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
-                <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="16" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
             </StackPanel>
         </Grid>
     </StackPanel>
