--- a/ChronoKeep/UI/Timing/RewindWindow.xaml
+++ b/ChronoKeep/UI/Timing/RewindWindow.xaml
@@ -8,42 +8,47 @@
         xmlns:xctf="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="Rewind" Height="300" Width="300" ResizeMode="NoResize">
-    <StackPanel VerticalAlignment="Center">
-        <Label Content="Rewind" FontSize="18" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Label Content="From" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="0" Grid.Row="0" Margin="10,5,5,5"/>
-            <Label Content="To" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="0" Margin="5,5,10,5"/>
-            <DatePicker Name="FromDate" FontSize="14" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" Margin="10,5,5,5"/>
-            <DatePicker Name="ToDate" FontSize="14" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Margin="5,5,10,5"/>
-            <xctf:MaskedTextBox Name="FromTime" FontSize="14" Mask="00:00:00" ValueDataType="{x:Type s:String}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="0" Grid.Row="2" Margin="10,5,5,5"/>
-            <xctf:MaskedTextBox Name="ToTime" FontSize="14" Mask="00:00:00" ValueDataType="{x:Type s:String}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="2" Margin="5,5,10,5"/>
-        </Grid>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button Name="SetYesterday" Content="Yesterday" Margin="10,10,3,10" Click="SetYesterday_Click" Height="25" Grid.Column="0"/>
-            <Button Name="SetToday" Content="Today" Margin="7,10,7,10" Click="SetToday_Click" Height="25" Grid.Column="1"/>
-            <Button Name="SetTomorrow" Content="Tomorrow" Margin="3,10,10,10" Click="SetTomorrow_Click" Height="25" Grid.Column="2"/>
-        </Grid>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Button Name="Rewind" Content="Rewind" HorizontalAlignment="Right" Width="100" Height="25" Margin="5,5,5,5" Grid.Column="0" Click="Rewind_Click"/>
-            <Button Name="Done" Content="Done" HorizontalAlignment="Left" Width="100" Height="25" Margin="5,5,5,5" Grid.Column="1" Click="Done_Click"/>
-        </Grid>
-    </StackPanel>
+    <xctf:BusyIndicator Name="busyIndicator">
+        <StackPanel VerticalAlignment="Center">
+            <Label Content="Rewind" FontSize="18" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Label Content="From" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="0" Grid.Row="0" Margin="10,5,5,5"/>
+                <Label Content="To" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="0" Margin="5,5,10,5"/>
+                <DatePicker Name="FromDate" FontSize="14" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" Margin="10,5,5,5"/>
+                <DatePicker Name="ToDate" FontSize="14" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Margin="5,5,10,5"/>
+                <xctf:MaskedTextBox Name="FromTime" FontSize="14" Mask="00:00:00" ValueDataType="{x:Type s:String}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="0" Grid.Row="2" Margin="10,5,5,5"/>
+                <xctf:MaskedTextBox Name="ToTime" FontSize="14" Mask="00:00:00" ValueDataType="{x:Type s:String}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="2" Margin="5,5,10,5"/>
+                <RadioButton x:Name="Reader1" Content="Reader 1" GroupName="Readers" IsChecked="True" Grid.Column="0" Grid.Row="3"  VerticalContentAlignment="Center" HorizontalAlignment="Center" Margin="10,5,5,5" Visibility="Collapsed"/>
+                <RadioButton x:Name="Reader2" Content="Reader 2" GroupName="Readers" Grid.Column="1" Grid.Row="3"  VerticalContentAlignment="Center" HorizontalAlignment="Center" Margin="5,5,10,5" Visibility="Collapsed"/>
+            </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Name="SetYesterday" Content="Yesterday" Margin="10,10,3,10" Click="SetYesterday_Click" Height="25" Grid.Column="0"/>
+                <Button Name="SetToday" Content="Today" Margin="7,10,7,10" Click="SetToday_Click" Height="25" Grid.Column="1"/>
+                <Button Name="SetTomorrow" Content="Tomorrow" Margin="3,10,10,10" Click="SetTomorrow_Click" Height="25" Grid.Column="2"/>
+            </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Name="Rewind" Content="Rewind" HorizontalAlignment="Right" Width="100" Height="25" Margin="5,5,5,5" Grid.Column="0" Click="Rewind_Click"/>
+                <Button Name="Done" Content="Done" HorizontalAlignment="Left" Width="100" Height="25" Margin="5,5,5,5" Grid.Column="1" Click="Done_Click"/>
+            </Grid>
+        </StackPanel>
+    </xctf:BusyIndicator>
 </Window>
