Added HTML results for a time-based event with the built in web service. Fixed an issue with the distance HTML template and the web service where if a result was given but didn't have an associated participant it would not display the page. Changed some class tags in the distance HTML template and corresponding CSS to match the NWEE website. Added variables to the HTTPServer class to ensure we can actually output our new Time Based Race HTTP site. Fixed an issue with participants who DNF being given ranks (and even worse, given ranks higher than those who actually finished due to how we were giving ranks to early starts) Fixed an issue where TimeResults and their status were never actually being set to DNF. Fixed an issue where our sorting of TimeResults was running into issues if the result wasn't associated with a person. Added a Clock Time Button to the Manual Entry window to make it easier when entering times based on what the clock says (instead of relative to the runner's start) The Manual Entry/DNF Entry window now clear the Bib number when the entry goes through. Some logic was also moved into an if statement so it wasn't called when it wasn't needed.

--- a/ChronoKeep/IO/HtmlTemplates/HtmlResultsTemplate.tt
+++ b/ChronoKeep/IO/HtmlTemplates/HtmlResultsTemplate.tt
@@ -10,18 +10,18 @@
 		<link rel='stylesheet' href='style.css'>
 	</head>
 	<body>
-		<div class='results-wrapper panel-group' id='results'>
-			<div class='text-important results-header'><h2><#= theEvent.YearCode #> <#= theEvent.Name #></h2></div>
-			<div class='results-panel panel panel-default'>
-				<div class='btn-wrapper'>
+		<div class='events-results-wrapper panel-group' id='results'>
+			<div class='text-important table-header'><h2><#= theEvent.YearCode #> <#= theEvent.Name #></h2></div>
+			<div class='events-panel panel panel-default'>
+				<div class='events-btn-wrapper'>
 					<# foreach (string d in divisionResults.Keys)
 					{ #>
-					<button class="btn btn-default results-btn collapsed" type="button" data-toggle="collapse" data-parent="#results" data-target="#results-<#= d.Replace(' ', '-') #>" aria-expanded="false" aria-controls="results-<#= d.Replace(' ', '-') #>"><#= d #></button>
+					<button class="btn btn-default events-btn collapsed" type="button" data-toggle="collapse" data-parent="#results" data-target="#<#= theEvent.YearCode #>-results-<#= d.Replace(' ', '-') #>" aria-expanded="false" aria-controls="<#= theEvent.YearCode #>-results-<#= d.Replace(' ', '-') #>"><#= d #></button>
 					<# } #>
 				</div>
 				<# foreach (string d in divisionResults.Keys)
 				{ #>
-				<div class="collapse" id="results-<#= d.Replace(' ', '-') #>">
+				<div class="collapse" id="<#= theEvent.YearCode #>-results-<#= d.Replace(' ', '-') #>">
 					<div class='well'>
 						<table>
 							<tr><td colspan='8' class='table-header text-important'><#= d #></td></tr>
