--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:ChronoKeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Manual Entry" Height="335" Width="300" Closing="Window_Closing">
+        Title="Manual Entry" Height="315" Width="300" Closing="Window_Closing">
     <StackPanel>
         <DockPanel>
             <Label Content="Bib" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
@@ -25,9 +25,9 @@
             <Label Content="Location" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
             <ComboBox Name="LocationBox" FontSize="16" Margin="5,10,10,10"/>
         </DockPanel>
-        <RadioButton Name="NetTimeButton" Content="Net Time" GroupName="TimeGroup" Margin="95,5,0,0" IsChecked="True" FontSize="14" VerticalContentAlignment="Center"/>
-        <RadioButton Name="ClockTimeButton" Content="Clock Time" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" />
-        <RadioButton Name="TimeofDayButton" Content="Time of Day" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center"/>
+        <RadioButton Name="NetTimeButton" Content="Net Time" GroupName="TimeGroup" Margin="95,5,0,0" IsChecked="True" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
+        <RadioButton Name="ClockTimeButton" Content="Clock Time" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
+        <RadioButton Name="TimeofDayButton" Content="Time of Day" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
         <Grid Margin="10,10,10,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
