--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -70,12 +70,14 @@
                                 <Button Content="Export Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="Export_Click"/>
                                 <Button Content="Recalculate" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="Recalculate_Click"/>
                                 <Button Content="Create HTML" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="CreateHTML_Click" />
+                                <Button Content="Auto API" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="AutoAPI_Click" />
                             </StackPanel>
                             <StackPanel Grid.Column="1">
                                 <Button Content="Awards" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="Award_Click"/>
                                 <Button Content="Raw Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="RawReads_Click"/>
                                 <Button x:Name="DNFButton" Content="Add DNF" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="AddDNF_Click"/>
                                 <Button x:Name="HttpServerButton" Content="Start Web" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="HTMLServerButton_Click"/>
+                                <Button Content="Manual API" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="ManualAPI_Click"/>
                             </StackPanel>
                         </Grid>
                         <DockPanel Name="IPContainer" HorizontalAlignment="Center" Margin="0,10,0,0">
