--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -29,6 +29,10 @@
                     <Label Content="Company Name" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
                     <TextBox Name="CompanyNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                 </DockPanel>
+                <DockPanel>
+                    <Label Content="Contact Email" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
+                    <TextBox Name="ContactEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                </DockPanel>
                 <DockPanel Grid.Column="0">
                     <Label Content="Default Timing System" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
                     <ComboBox Name="DefaultTimingBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
