Added linked divisions/distances to allow unranked/early start divisions for one distance rankings. Removed Early Start option from the modify participant window.

--- a/ChronoKeep/UI/MainPages/DivisionsPage.xaml
+++ b/ChronoKeep/UI/MainPages/DivisionsPage.xaml
@@ -24,7 +24,7 @@
                 </ListBox.ItemContainerStyle>
             </ListBox>
             <DockPanel Grid.Row="1" HorizontalAlignment="Center">
-                <Button Name="Add" Content="Add Group" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" />
+                <Button Name="Add" Content="Add Distance" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" />
                 <Button Name="UpdateBtn" Content="Update" Click="Update_Click" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" />
                 <Button Name="ResetBtn" Content="Reset" Click="Revert_Click" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" />
             </DockPanel>
