Changed names of constants to better reflect their use for division types. Modified method for retrieving time_results from the database so we can get the name of a linked division. Linked divisions now properly print out together with a type field for differentiating different types. Removed linked divisions from printing page options (since they're linked and they print together)

--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -23,7 +23,8 @@
                     <GridViewColumn Header="GP" Width="25" DisplayMemberBinding="{Binding GenderPlaceStr}"/>
                     <GridViewColumn Header="Age Grp" Width="55" DisplayMemberBinding="{Binding AgeGroupName}" />
                     <GridViewColumn Header="AP" Width="25" DisplayMemberBinding="{Binding AgePlaceStr}"/>
-                    <GridViewColumn Header="Division" Width="80" DisplayMemberBinding="{Binding DivisionNameWithEarly}" />
+                    <GridViewColumn Header="Division" Width="60" DisplayMemberBinding="{Binding DivisionName}" />
+                    <GridViewColumn Header="T" Width="20" DisplayMemberBinding="{Binding PrettyType}"/>
                     <GridViewColumn Header="Segment" Width="70" DisplayMemberBinding="{Binding SegmentName}" />
                 </GridView>
             </ListView.View>
